# gitswitch

./: .gitignore  .goreleaser.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.html  README.md  config.ini  go.mod  go.sum  logging.json  multi_git_manager.py  pyproject.toml  requirements.txt  setup.py  test.test
.github/: release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
Formula/: git-switch.rb  git_switch.rb  gitswitch.rb
cmd/gitswitch/: main.go
docs/: demo.tape  launch-copy.md  launch-post.md  launch.md
internal/blocks/: blocks.go
internal/cmd/: add.go  argshelp.go  colors.go  delete.go  doctor.go  env.go  guard.go  init.go  list.go  migrate.go  rename.go  root.go  use.go  why.go
internal/discover/: discover.go
internal/gh/: gh.go
internal/git/: git.go
internal/hookscript/: hookscript.go
internal/identity/: binding.go  files.go  identity.go
internal/legacy/: legacy.go
internal/ssh/: context.go  ssh.go
internal/style/: style.go
src/: cli.py  config.py  git.py  logging_config.py  main.py  ssh.py  utils.py
src/commands/: add.py  add_command.py  current.py  current_command.py  delete.py  delete_command.py  generate_command.py  generate_key.py  list.py  list_command.py  switch.py  switch_command.py  version_command.py
src/config/: config.py  git.py  main.py  ssh.py
src/configs/: cli.py  gh.py  git.py  ssh.py  utils.py
