[project]
name = "GitSwitch"
version = "0.0.1"
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/target-ops/GitSwitch"
Issues = "https://github.com/target-ops/GitSwitch/issues"