[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-user-manager"
version = "0.0.1"
description = "Manage multiple Git users for different vendors."
authors = [
    { name = "ofirhaim", email = "ofir474@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # List your dependencies here
]

[tool.setuptools.packages.find]
where = ["src"]
